ns-datascience.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "datascience",
    "labels": {
      "name": "datascience"
    }
  }
}
