ns-segmentation.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "app-segmentation",
    "labels": {
      "name": "app-segmentation"
    }
  }
}
